[gd_scene load_steps=10 format=3 uid="uid://pnu8ghovek6s"]

[ext_resource type="Script" path="res://scripts/UI/skill_tree.gd" id="1_obde8"]
[ext_resource type="Texture2D" uid="uid://dqe1q13m2i0m8" path="res://assets/ui/fight_ui/combat_char_bg_2.png" id="1_rhdbn"]
[ext_resource type="Texture2D" uid="uid://7o3a8tlw6qhr" path="res://assets/ui/skills/basic_slash.png" id="2_ktexg"]
[ext_resource type="Texture2D" uid="uid://dn1ligfca00d8" path="res://assets/ui/skills/firespark.png" id="3_4ffkn"]
[ext_resource type="Script" path="res://scripts/UI/skill_node.gd" id="3_q158y"]
[ext_resource type="Texture2D" uid="uid://duahxumfrpsrs" path="res://assets/ui/skills/sprint.png" id="4_4jy7r"]

[sub_resource type="Gradient" id="Gradient_60x87"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.28485, 0.28485, 0.28485, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xppr2"]
gradient = SubResource("Gradient_60x87")

[sub_resource type="LabelSettings" id="LabelSettings_p1ob8"]
font_size = 40

[node name="skill_tree" type="MarginContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -961.0
offset_top = -539.0
offset_right = 959.0
offset_bottom = 541.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_obde8")

[node name="background" type="TextureRect" parent="."]
layout_mode = 2
texture = SubResource("GradientTexture2D_xppr2")

[node name="skill_points" type="Label" parent="background"]
layout_mode = 0
offset_left = 99.0
offset_top = 106.0
offset_right = 412.0
offset_bottom = 185.0
text = "3 skill points remaining"
label_settings = SubResource("LabelSettings_p1ob8")

[node name="skill_node1" type="TextureButton" parent="background"]
z_index = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -15.0
offset_right = 75.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
texture_normal = ExtResource("1_rhdbn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_q158y")

[node name="Line2D" type="Line2D" parent="background/skill_node1"]
z_as_relative = false
position = Vector2(-885, -533)
points = PackedVector2Array(960, 600, 960, 325)

[node name="Line2D" type="Line2D" parent="background/skill_node1/Line2D"]
points = PackedVector2Array(570, 325, 1350, 325)

[node name="skill_icon" type="TextureRect" parent="background/skill_node1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ktexg")
expand_mode = 1

[node name="skill_node2" type="TextureButton" parent="background/skill_node1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.0
offset_top = -358.0
offset_right = -315.0
offset_bottom = -208.0
texture_normal = ExtResource("1_rhdbn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_q158y")

[node name="skill_icon" type="TextureRect" parent="background/skill_node1/skill_node2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_4ffkn")
expand_mode = 1

[node name="skill_node3" type="TextureButton" parent="background/skill_node1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 315.0
offset_top = -358.0
offset_right = 465.0
offset_bottom = -208.0
texture_normal = ExtResource("1_rhdbn")
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("3_q158y")

[node name="skill_icon" type="TextureRect" parent="background/skill_node1/skill_node3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -56.0
offset_top = -56.0
offset_right = 56.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_4jy7r")
expand_mode = 1
